documentMD/V3/DataIntegrity/API-Reference/pocstudy.md
---
icon: dot
---

# POCStudy

This module for POCStudy lock level.

## Main function

---

### mintPOCStudy

```ts
ddr.mintPOCStudy(uri, message, privateKey, nonce?, isSimulate?);
```

Create POC

#### Parameters

1. [!badge variant="warning" text="uri"] - [!badge variant="warning" text="string"]: The uri of POCStudy.
2. [!badge variant="warning" text="message"] - [!badge variant="warning" text="string"]: The message was sent from Pharumo.
3. [!badge variant="warning" text="privateKey"] - [!badge variant="warning" text="string"] : Private key of contract creator(admin).
4. [!badge variant="warning" text="nonce"] - [!badge variant="warning" text="number"] (optional): The nonce of account.
5. [!badge variant="warning" text="isSimulate"] - [!badge variant="warning" text="boolean"] (optional): Emulator status.

#### Returns

1. [!badge variant="danger" text="receipt"] - [!badge variant="danger" text="object"]: A transaction receipt object, or null if no receipt was found. (check receipt).
2. [!badge variant="danger" text="eventLogs"] - [!badge variant="danger" text="object"]: Event logs of transactions.
3. [!badge variant="danger" text="tokenId"] - [!badge variant="danger" text="string"]: Id of POC token.

#### Example

```ts
pocStudy.mintPOCStudy('ggwp',
        "i am dev blockchain",
        "24118478a12cd8e910ec3ae69edc8bda17c70754dd00d13f28dda0aa0f8644bb")
        .then(console.log);
> {
  receipt: {
    root: '0x0000000000000000000000000000000000000000000000000000000000000000',
    cumulativeGasUsed: 1080775,
    logsBloom: '0x00000000000000000080000400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000040000000000000000000000008008000000000000004000040000001000000000000000000000820000000000000000000800200000000000000000000010000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000070000000000000000000000000000000000000000000000000000000000000000000',
    logs: [ [Object], [Object] ],
    status: true,
    transactionHash: '0x9d50cdc5d13ccbc951b8a419596a4d6f79f6b3153e79a94c2166f614059a7562',
    transactionIndex: 0,
    blockHash: '0x3f9b3a03baea8868dcff1b229abac5d250058d380c69a055b750e8f6c782c5d2',
    blockNumber: 1654583,
    gasUsed: 1080775,
    contractAddress: null,
    from: '0x51C4B0487e16186da402daebE06C4cD71b5015c8',
    to: '0xE8918359122d7C4ab91186689D49FfbE55566E07'
  },
  eventLogs: [
    {
      name: 'Transfer',
      events: [Array],
      address: '0xE8918359122d7C4ab91186689D49FfbE55566E07'
    },
    {
      name: 'LockedPOCPatient',
      events: [Array],
      address: '0xE8918359122d7C4ab91186689D49FfbE55566E07'
    }
  ],
  tokenId: '1',
  hashValue: '0xd27c798b1a6acf164ecccc0c3a501a88f0007f350905663ffc4ee8911fc764c9'

}
```

---

### getRootHashPOCPatient

```ts
pocStudy.getRootHashPOCPatient();
```

Get Root Hash Value.

#### Parameters

None

#### Returns

[!badge variant="danger" text="String"]: Hash Value of Root Patient .

#### Example

```ts
pocStudy.getRootHashPOCPatient().then(console.log);
> "0xac25ffa90fbec2aa0a500be3e3f0643323c9c9c2c62aa5d685b7a50011d80c78"
```

---

### getRootNodeIdPOCPatient

```ts
pocStudy.getRootNodeIdPOCPatient();
```

Get Hash Value of Root Node Patient.

#### Parameters

None

#### Returns

[!badge variant="danger" text="String"]: Hash Value of Root Node Patient.

#### Example

```ts
pocStudy.getRootNodeIdPOCPatient().then(console.log);
> "0xc9c0421f4fc69e49a6f8d43cade8d3768bb9968fc0b6c831170a4984933edf1e"
```

---

### permamentLock

```ts
ddr.permamentLock(privateKey, nonce?, isSimulate?);
```

Permament Lock Owner.

#### Parameters

1. [!badge variant="warning" text="privateKey"] - [!badge variant="warning" text="string"] : Private key of contract creator(admin).
2. [!badge variant="warning" text="nonce"] - [!badge variant="warning" text="number"] (optional): The nonce of account.
3. [!badge variant="warning" text="isSimulate"] - [!badge variant="warning" text="boolean"] (optional): Emulator status.

#### Returns

1. [!badge variant="danger" text="receipt"] - [!badge variant="danger" text="object"]: A transaction receipt object, or null if no receipt was found. (check receipt).

#### Example

```ts
pocStudy.mintPOCStudy('ggwp',
        "i am dev blockchain",
        "24118478a12cd8e910ec3ae69edc8bda17c70754dd00d13f28dda0aa0f8644bb")
        .then(console.log);
> {
   receipt: [
    {
      root: '0x0000000000000000000000000000000000000000000000000000000000000000',
      cumulativeGasUsed: 14798,
      logsBloom: '0x00000000000000000080000400000000000000000000000000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000800000000000000000000001000000000000000000000000000000000000021000000000000000000800000000008000000000000000000000400000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000000
',
      logs: [Array],
      status: true,
      transactionHash: '0xa2177f0130f344a8a0490428a3a7162c4a53038f748fca8e7b8bb32ecbb11d14',
      transactionIndex: 0,
      blockHash: '0x299c8a8869886b124ef1b4227982cfebdb15a83144e40492a867f7e29982e4d1',
      blockNumber: 821897,
      gasUsed: 14798,
      contractAddress: null,
      from: '0x51C4B0487e16186da402daebE06C4cD71b5015c8',
      to: '0x23af3EEE7C48827dC9B0A92C01AA897591Bb447d'
    },
    {
      root: '0x0000000000000000000000000000000000000000000000000000000000000000',
      cumulativeGasUsed: 29585,
      logsBloom: '0x00000000000000000080000400000000000000000000000000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000020000000000000000000800000000000000000000000000000000400000000000000000000000000000000000000000000000000010000000000000000000000000000000000001004080000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000000
',
      logs: [Array],
      status: true,
      transactionHash: '0x3ac0a39cb3979196f1975ef8f727f4fef35b2e12ae0e67850d2b067dc31ad52b',
      transactionIndex: 1,
      blockHash: '0x299c8a8869886b124ef1b4227982cfebdb15a83144e40492a867f7e29982e4d1',
      blockNumber: 821897,
      gasUsed: 14787,
      contractAddress: null,
      from: '0x51C4B0487e16186da402daebE06C4cD71b5015c8',
      to: '0xCD7d5127a1B707Ff67d1Fb734eA5D0ff741e183b'
    },
    {
      root: '0x0000000000000000000000000000000000000000000000000000000000000000',
      cumulativeGasUsed: 44383,
      logsBloom: '0x00000000000000000080000400000000000000000000000000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000020000000000000000000800000000000000000000000000000000400000000000000000000000000000000000400000000000000010000000000000000000000000000000010000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000000
',
      logs: [Array],
      status: true,
      transactionHash: '0xffdef3bd6ebefcdebaa4aa610a4546f022549e128a25acf3ad2f3b8f217c48fa',
      transactionIndex: 2,
      blockHash: '0x299c8a8869886b124ef1b4227982cfebdb15a83144e40492a867f7e29982e4d1',
      blockNumber: 821897,
      gasUsed: 14798,
      contractAddress: null,
      from: '0x51C4B0487e16186da402daebE06C4cD71b5015c8',
      to: '0x0A0fcEd3622c89A26Cfb8b6486aE48Ce3d8fBD67'
    },
    {
      root: '0x0000000000000000000000000000000000000000000000000000000000000000',
      cumulativeGasUsed: 59159,
      logsBloom: '0x00000000000000000080000400000000000000000000000010800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000020000000000000000000800000000000000000000000000000000400000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000008000000020000000000000000000000000000000000000000000000000000000000000000000
',
      logs: [Array],
      status: true,
      transactionHash: '0x59006a7c761624c64836201f8784970265d205e3301788e74f8db285235a13e5',
      transactionIndex: 3,
      blockHash: '0x299c8a8869886b124ef1b4227982cfebdb15a83144e40492a867f7e29982e4d1',
      blockNumber: 821897,
      gasUsed: 14776,
      contractAddress: null,
      from: '0x51C4B0487e16186da402daebE06C4cD71b5015c8',
      to: '0x9976B36047FcE4d8A6b87235C8c86aDcb181e3B5'
    },
    {
      root: '0x0000000000000000000000000000000000000000000000000000000000000000',
      cumulativeGasUsed: 73946,
      logsBloom: '0x00000000000000000080000400000000000000000000000000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000200020000000000000000000800000000000000000200000000000000400000000000000020000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000000
',
      logs: [Array],
      status: true,
      transactionHash: '0x435dc1b2d6371b76cfa512802f76adfb29023b010f285245cc143c74d8b751cb',
      transactionIndex: 4,
      blockHash: '0x299c8a8869886b124ef1b4227982cfebdb15a83144e40492a867f7e29982e4d1',
      blockNumber: 821897,
      gasUsed: 14787,
      contractAddress: null,
      from: '0x51C4B0487e16186da402daebE06C4cD71b5015c8',
      to: '0x2759c4BCcC1Dd45358ef8bc5F2c96b395791EF96'
    },
    {
      root: '0x0000000000000000000000000000000000000000000000000000000000000000',
      cumulativeGasUsed: 88744,
      logsBloom: '0x00000000000000000080000400000000000000000000000000800080000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000020000000000000000000800000000000000000000000000000000400000000000000000000000000080000000000000000000000010000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000000
',
      logs: [Array],
      status: true,
      transactionHash: '0xe559c735d9055dae2aa09162d38d9f9be26d112aa34a19894bd3567ad85886d6',
      transactionIndex: 5,
      blockHash: '0x299c8a8869886b124ef1b4227982cfebdb15a83144e40492a867f7e29982e4d1',
      blockNumber: 821897,
      gasUsed: 14798,
      contractAddress: null,
      from: '0x51C4B0487e16186da402daebE06C4cD71b5015c8',
      to: '0xf06e8e01Ce9E463f8395529B4F006a2780d6969b'
    }
  ]
}
```
